part3/3.07/kube/manifests/todo-app.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-app-svc
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: picture-cache
          persistentVolumeClaim:
            claimName: picture-cache-claim
      containers:
        - name: todo-app
          image: TODO_APP/IMAGE
          volumeMounts:
            - name: picture-cache
              mountPath: /usr/src/app/cache
